--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
     "icon": "images/icon.png",
     "description": "Compares two selected files in Visual Studio Code",
     "version": "1.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/charlpcronje/Compare-Files-VSCode-Extension "
+    },
     "engines": {
         "vscode": "^1.89.0"
     },
     "categories": [
         "Other"
     ],
-    "activationEvents": [],
+    "activationEvents": [
+        "onCommand:extension.compareFiles"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [{
@@ -29,7 +35,8 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "lint": "eslint . --ext .ts,.tsx",
-        "watch": "tsc -watch -p ./"
+        "watch": "tsc -watch -p ./",
+        "package": "vsce package"
     },
     "devDependencies": {
         "@types/node": "^16.0.0",
@@ -37,6 +44,7 @@
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "^8.0.0",
-        "typescript": "^4.9.0"
+        "typescript": "^4.9.0",
+        "vsce": "^2.7.0"
     }
 }
